--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,10 @@
     "strict": true,
     "esModuleInterop": true
   },
-  "include": ["./src/**/*", "images.d.ts", "./src/services/firebase.ts"]
+  "include": [
+    "./src/**/*",
+    "images.d.ts",
+    "./src/services/firebase.ts",
+    "./src/utils/index.ts"
+  ]
 }
