--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-router-dom": "^5.2.0",
     "recoil": "^0.0.7",
     "styled-components": "^5.1.0",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "uuid": "^8.1.0"
   }
 }
