--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@babel/preset-typescript": "^7.9.0",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
+    "css-loader": "^3.5.3",
     "electron": "^9.0.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
@@ -42,6 +44,7 @@
     "react-icons": "^3.10.0",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^5.2.0",
+    "react-spinkit": "^3.0.0",
     "recoil": "^0.0.7",
     "styled-components": "^5.1.0",
     "url": "^0.11.0"
