--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-icons": "^3.10.0",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^5.2.0",
+    "react-share": "^4.1.0",
     "react-spinkit": "^3.0.0",
     "recoil": "^0.0.7",
     "styled-components": "^5.1.0",
