--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-router-dom": "^5.2.0",
     "react-share": "^4.1.0",
     "react-spinkit": "^3.0.0",
-    "recoil": "^0.0.7",
+    "react-tooltip": "^4.2.6",
+    "recoil": "^0.0.8",
     "styled-components": "^5.1.0",
     "url": "^0.11.0"
   }
