--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
+    "@types/history": "4.7.3",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
@@ -29,9 +30,12 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@types/qs": "^6.9.3",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@types/react-lottie": "^1.2.5",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-spinkit": "^3.0.6",
     "@types/recoil": "^0.0.0",
     "@types/styled-components": "^5.1.0",
     "axios": "^0.19.2",
