--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-tooltip": "^4.2.6",
     "recoil": "^0.0.8",
     "styled-components": "^5.1.0",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "uuid": "^8.1.0"
   }
 }
