--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "favlinkz-desktop",
-  "productName": "favlinkz",
+  "productName": "Favlinkz",
   "version": "1.0.0",
   "description": "",
   "main": "./dist/main.js",
   "scripts": {
     "prod:electron": "cross-env NODE_ENV=production webpack --mode production --config webpack.electron.config.js && electron --noDevServer .",
     "dev:electron": "cross-env NODE_ENV=development webpack --config webpack.electron.config.js --mode development && electron .",
-    "dev:react": "cross-env NODE_ENV=development webpack-dev-server --config webpack.react.config.js --mode development"
+    "dev:react": "cross-env NODE_ENV=development webpack-dev-server --config webpack.react.config.js --mode development",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.react.config.js --mode production",
+    "package": "npm run build",
+    "postpackage": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=icon/icon.icns --prune=true --out=release-builds"
   },
   "keywords": [],
   "author": "",
@@ -19,11 +22,14 @@
     "@babel/preset-typescript": "^7.9.0",
     "@types/history": "4.7.3",
     "babel-loader": "^8.1.0",
+    "babili-webpack-plugin": "^0.1.2",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
     "electron": "^9.0.0",
+    "electron-packager": "^14.2.1",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
