--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-tooltip": "^4.2.6",
     "recoil": "^0.0.8",
     "styled-components": "^5.1.0",
+    "uifx": "^2.0.7",
     "url": "^0.11.0",
     "uuid": "^8.1.0"
   }
