--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
+    "websocket-extensions": "^0.1.4",
     "worker-loader": "^2.0.0"
   },
   "dependencies": {
