--- a/package.json
+++ b/package.json
@@ -22,49 +22,47 @@
     "@babel/preset-typescript": "^7.9.0",
     "@types/history": "4.7.3",
     "@types/node": "^14.0.13",
+    "@types/qs": "^6.9.3",
+    "@types/react": "^16.9.36",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-lottie": "^1.2.5",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/react-spinkit": "^3.0.6",
+    "@types/recoil": "^0.0.1",
+    "@types/styled-components": "^5.1.0",
+    "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
     "babili-webpack-plugin": "^0.1.2",
+    "better-react-spinkit": "^2.0.4",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
     "electron": "^9.0.0",
     "electron-packager": "^14.2.1",
     "file-loader": "^6.0.0",
+    "firebase": "^7.15.1",
+    "framer-motion": "^2.0.0-beta.75",
+    "history": "^5.0.0",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "style-loader": "^1.2.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0",
-    "websocket-extensions": "^0.1.4",
-    "worker-loader": "^2.0.0"
-  },
-  "dependencies": {
-    "@types/qs": "^6.9.3",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-lottie": "^1.2.5",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/react-spinkit": "^3.0.6",
-    "@types/recoil": "^0.0.0",
-    "@types/styled-components": "^5.1.0",
-    "axios": "^0.19.2",
-    "better-react-spinkit": "^2.0.4",
-    "firebase": "^7.15.0",
-    "framer-motion": "^2.0.0-beta.72",
-    "history": "^5.0.0",
     "qs": "^6.9.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^5.2.0",
-    "react-share": "^4.1.0",
+    "react-share": "^4.2.0",
     "react-spinkit": "^3.0.0",
     "react-tooltip": "^4.2.6",
     "recoil": "^0.0.8",
-    "styled-components": "^5.1.0",
-    "uifx": "^2.0.7",
+    "style-loader": "^1.2.1",
+    "styled-components": "^5.1.1",
     "url": "^0.11.0",
-    "uuid": "^8.1.0"
-  }
+    "uuid": "^8.1.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0",
+    "websocket-extensions": "^0.1.4",
+    "worker-loader": "^2.0.0"
+  },
+  "dependencies": {}
 }
