--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "version": "1.0.0",
   "description": "",
   "main": "./dist/main.js",
+  "build": {
+    "extraResources": [
+      "./icons/**"
+    ]
+  },
   "scripts": {
     "prod:electron": "cross-env NODE_ENV=production webpack --mode production --config webpack.electron.config.js && electron --noDevServer .",
     "dev:electron": "cross-env NODE_ENV=development webpack --config webpack.electron.config.js --mode development && electron .",
     "dev:react": "cross-env NODE_ENV=development webpack-dev-server --config webpack.react.config.js --mode development",
     "build": "cross-env NODE_ENV=production webpack --config webpack.react.config.js --mode production",
     "package": "npm run build",
-    "postpackage": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=icon/icon.icns --prune=true --out=release-builds"
+    "postpackage": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=icons/icon.icns --prune=true --out=release-builds"
   },
   "keywords": [],
   "author": "",
@@ -54,8 +59,10 @@
     "react-spinkit": "^3.0.0",
     "react-tooltip": "^4.2.6",
     "recoil": "^0.0.8",
+    "rimraf": "^3.0.2",
     "style-loader": "^1.2.1",
     "styled-components": "^5.1.1",
+    "terser-webpack-plugin": "^3.0.4",
     "url": "^0.11.0",
     "uuid": "^8.1.0",
     "webpack": "^4.43.0",
