--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev:electron": "cross-env NODE_ENV=development webpack --config webpack.electron.config.js --mode development && electron .",
     "dev:react": "cross-env NODE_ENV=development webpack-dev-server --config webpack.react.config.js --mode development",
     "build": "cross-env NODE_ENV=production webpack --config webpack.react.config.js --mode production",
+    "postbuild": "rimraf dist/**/*.map",
     "package": "npm run build",
     "postpackage": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=icons/icon.icns --prune=true --out=release-builds"
   },
