Adds proper check to see if subscribed card

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
-    "lib": ["dom", "es2015", "es2016", "es2017"],
+    "lib": ["dom", "es2015", "es2016", "es2017", "webworker"],
     "allowJs": true,
     "jsx": "react",
     "sourceMap": true,
