--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "favlinkz-desktop",
   "productName": "Favlinkz",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "./dist/main.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nicopellerin/favlinkz-desktop.git"
+  },
   "build": {
     "extraResources": [
       "./icons/**"
@@ -73,6 +77,7 @@
     "worker-loader": "^2.0.0"
   },
   "dependencies": {
-    "object-hash": "^2.0.3"
+    "object-hash": "^2.0.3",
+    "update-electron-app": "^1.5.0"
   }
 }
